# mpi_project_1

./: .gitignore  .gitmodules  CMakeLists.txt  ETOPO1_tiny.csv  Makefile  README.md  coeff_series.r  discrete_grid.RData  harmonics.c  harmonics.f90  harmonics.h  iso.csv  iso2.csv  model.c  model_ejovo.c  plot_geo_data.m  reduce.c  test_harmonic.f90  validate.c
.github/workflows/: Mac.yml  Ubuntu.yml
csv/: ETOPO1_unif.csv  ETOPO1_unit.csv  old_model_error.csv  parallel_timing.csv  small_error_report.csv  testcoeff_series.csv  timing.csv
csv/diff/: diff_small_0.csv  diff_small_10.csv  diff_small_100.csv  diff_small_12.csv  diff_small_14.csv  diff_small_150.csv  diff_small_16.csv  diff_small_18.csv  diff_small_2.csv  diff_small_20.csv  diff_small_200.csv  diff_small_300.csv  diff_small_4.csv  diff_small_5.csv  diff_small_50.csv  diff_small_6.csv  diff_small_8.csv
csv/models/: sph_hi_0.txt  sph_hi_10.txt  sph_hi_100.txt  sph_hi_150.txt  sph_hi_20.txt  sph_hi_200.txt  sph_hi_300.txt  sph_hi_5.txt  sph_hi_50.txt  sph_med_0.txt  sph_med_10.txt  sph_med_100.txt  sph_med_150.txt  sph_med_20.txt  sph_med_200.txt  sph_med_300.txt  sph_med_5.txt  sph_med_50.txt  sph_small_0.txt  sph_small_10.txt  sph_small_100.txt  sph_small_150.txt  sph_small_20.txt  sph_small_200.txt  sph_small_300.txt  sph_small_5.txt  sph_small_50.txt
data/: def_model_20_180_360.txt  model_100_180_360.txt  model_10_180_360.txt  model_200_180_360.txt  model_20_180_360.txt  model_30_180_360.txt  model_3_180_360.txt  model_50_180_360.txt
data/small/: old_model_0_180_360.txt  old_model_10_180_360.txt  old_model_11_180_360.txt  old_model_12_180_360.txt  old_model_13_180_360.txt  old_model_14_180_360.txt  old_model_15_180_360.txt  old_model_16_180_360.txt  old_model_17_180_360.txt  old_model_18_180_360.txt  old_model_19_180_360.txt  old_model_1_180_360.txt  old_model_2_180_360.txt  old_model_3_180_360.txt  old_model_4_180_360.txt  old_model_5_180_360.txt  old_model_6_180_360.txt  old_model_7_180_360.txt  old_model_8_180_360.txt  old_model_9_180_360.txt
inc/: cli.h  constants.h  data.h  factorial.h  geodesy.h  harmonics.h  learn.h  model.h  mpi_util.h  old_model.h  phase_1.h  phase_2.h  phase_3.h  ranges.h
lib/: CMakeLists.txt  cli.c  data.c  harmonics.c  learn.c  model.c  mpi_util.c  old_model.c  phase_1.c  phase_2.c  phase_3.c  ranges.c
src/: CMakeLists.txt  benchmark.c  benchmark_mpi.sh  build_hi_models.sh  build_med_models.sh  build_old_small.sh  build_small_models.sh  coeff_analysis.r  coeff_series.r  diff_analysis.r  error_report.r  ilm.r  least_vs_numerical.r  load_diff.r  model.c  model_ejovo.c  mpi_analysis.r  mpi_test.r  mse_analysis.c  new_model.c  new_model_mpi.c  new_model_omp.c  new_model_omp2.c  old_model.c  output_world_txt.r  parallel_speedup.c  parallel_timing_report.r  phase_1.c  phase_2.c  plot_diff.m  plot_geo_data.m  plot_med.m  plot_med_data.m  plot_med_range_data.m  plot_med_range_data2.m  plot_med_range_data_alt.m  prediction.r  reduce.c  reduce_dataset_size.c  run_mpi.sh  (+6 more)
test/: CMakeLists.txt  parallel_programming.bib  run_proc.sh  test_hello_mpi.c  test_i_to_lm.c  test_omp_proc_available.c  test_range.c  test_validate_ultra.c
tex/: .gitignore  ppar.bib  prelim.tex
